--- a/archives/toutiao-search/2023-11-12.md
+++ b/archives/toutiao-search/2023-11-12.md
@@ -1,65 +1,81 @@
 # 2023-11-12
 
-共 229 条
+共 242 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sun Nov 12 2023 14:00:46 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sun Nov 12 2023 15:00:47 GMT+0800 (China Standard Time) -->
 1. [警方公开通缉缅北果敢4名电诈头目](https://so.toutiao.com/search?keyword=警方公开通缉缅北果敢4名电诈头目)
-1. [“双十一”为什么越来越冷清](https://so.toutiao.com/search?keyword=“双十一”为什么越来越冷清)
-1. [全国秋粮收获已过九成半](https://so.toutiao.com/search?keyword=全国秋粮收获已过九成半)
 1. [东北一校8名男生集体穿军大衣上课](https://so.toutiao.com/search?keyword=东北一校8名男生集体穿军大衣上课)
+1. [全国秋粮收获已过九成半](https://so.toutiao.com/search?keyword=全国秋粮收获已过九成半)
+1. [小伙改装无人机当“私人飞机”](https://so.toutiao.com/search?keyword=小伙改装无人机当“私人飞机”)
+1. [“双十一”为什么越来越冷清](https://so.toutiao.com/search?keyword=“双十一”为什么越来越冷清)
+1. [大批中国公民滞留俄罗斯？官方回应](https://so.toutiao.com/search?keyword=大批中国公民滞留俄罗斯？官方回应)
+1. [男子杀人逃深山 养8只恶犬防身](https://so.toutiao.com/search?keyword=男子杀人逃深山+养8只恶犬防身)
+1. [这届年轻人双11消费变了](https://so.toutiao.com/search?keyword=这届年轻人双11消费变了)
+1. [大学生偷返高中 老师表情亮了](https://so.toutiao.com/search?keyword=大学生偷返高中+老师表情亮了)
+1. [美加州郡长：对中国有意见你去过吗](https://so.toutiao.com/search?keyword=美加州郡长：对中国有意见你去过吗)
+1. [镇长砸水瓶后村民拍桌回怼？当地回应](https://so.toutiao.com/search?keyword=镇长砸水瓶后村民拍桌回怼？当地回应)
+1. [广州一工地挖破燃气管道？假的](https://so.toutiao.com/search?keyword=广州一工地挖破燃气管道？假的)
+1. [媒体：加沙巷战以军“不败而败”](https://so.toutiao.com/search?keyword=媒体：加沙巷战以军“不败而败”)
 1. [低价硝烟下天猫京东公布双11战绩](https://so.toutiao.com/search?keyword=低价硝烟下天猫京东公布双11战绩)
+1. [库明加多次杀伤骑士内线搏11次罚球](https://so.toutiao.com/search?keyword=库明加多次杀伤骑士内线搏11次罚球)
+1. [女方悔婚不退彩礼被砍杀？警方介入](https://so.toutiao.com/search?keyword=女方悔婚不退彩礼被砍杀？警方介入)
+1. [以军称空袭叙利亚武装人员基础设施](https://so.toutiao.com/search?keyword=以军称空袭叙利亚武装人员基础设施)
+1. [张杰晒和三个女儿的背影照](https://so.toutiao.com/search?keyword=张杰晒和三个女儿的背影照)
+1. [美媒：美国众议院已“完全失控”](https://so.toutiao.com/search?keyword=美媒：美国众议院已“完全失控”)
+1. [房地产政策效果正在显现](https://so.toutiao.com/search?keyword=房地产政策效果正在显现)
+1. [以总理：将在必要时坚定与世界对抗](https://so.toutiao.com/search?keyword=以总理：将在必要时坚定与世界对抗)
+1. [麻省理工亲巴组织阻止犹太学生上课](https://so.toutiao.com/search?keyword=麻省理工亲巴组织阻止犹太学生上课)
+1. [温州永嘉开展农民自建房隐患排查](https://so.toutiao.com/search?keyword=温州永嘉开展农民自建房隐患排查)
+1. [伊朗：是时候就加沙局势采取行动了](https://so.toutiao.com/search?keyword=伊朗：是时候就加沙局势采取行动了)
+1. [美媒：美军援以乌但已无法控制事态](https://so.toutiao.com/search?keyword=美媒：美军援以乌但已无法控制事态)
+1. [天一亮时间就不属于我了](https://so.toutiao.com/search?keyword=天一亮时间就不属于我了)
+1. [加沙最大医院39名婴儿因断电缺氧死亡](https://so.toutiao.com/search?keyword=加沙最大医院39名婴儿因断电缺氧死亡)
+1. [男子喂猪时晕倒 遭猪啃食下半身](https://so.toutiao.com/search?keyword=男子喂猪时晕倒+遭猪啃食下半身)
+1. [爸爸喝醉把儿子忘地铁上了](https://so.toutiao.com/search?keyword=爸爸喝醉把儿子忘地铁上了)
+1. [国家一级导演车径行去世](https://so.toutiao.com/search?keyword=国家一级导演车径行去世)
+1. [名记：乌布雷遭遇车祸目前情况稳定](https://so.toutiao.com/search?keyword=名记：乌布雷遭遇车祸目前情况稳定)
+1. [女生发现有人用共享洗衣机洗鞋](https://so.toutiao.com/search?keyword=女生发现有人用共享洗衣机洗鞋)
+1. [白鹿为报秦霄贤的仇等了两个月](https://so.toutiao.com/search?keyword=白鹿为报秦霄贤的仇等了两个月)
+1. [老人反对装电梯建好又想用被拒绝](https://so.toutiao.com/search?keyword=老人反对装电梯建好又想用被拒绝)
+1. [女子看守所探监 等待中吸毒被捕](https://so.toutiao.com/search?keyword=女子看守所探监+等待中吸毒被捕)
+1. [校方回应女生在图书馆占16座还骂人](https://so.toutiao.com/search?keyword=校方回应女生在图书馆占16座还骂人)
+1. [南方也要冷冷冷了](https://so.toutiao.com/search?keyword=南方也要冷冷冷了)
+1. [陕西回应强砍3万棵国槐：违规占用](https://so.toutiao.com/search?keyword=陕西回应强砍3万棵国槐：违规占用)
+1. [勇士vs骑士述评：汤追双重伤害](https://so.toutiao.com/search?keyword=勇士vs骑士述评：汤追双重伤害)
+1. [石家庄现多起车祸 疑因洒水路面结冰](https://so.toutiao.com/search?keyword=石家庄现多起车祸+疑因洒水路面结冰)
+1. [记者：中国足协杯决赛开球时间确定](https://so.toutiao.com/search?keyword=记者：中国足协杯决赛开球时间确定)
+1. [男子在江心发现生锈保险箱](https://so.toutiao.com/search?keyword=男子在江心发现生锈保险箱)
+1. [世卫组织称与加沙希法医院失去联系](https://so.toutiao.com/search?keyword=世卫组织称与加沙希法医院失去联系)
+1. [多国爆发床虱危机](https://so.toutiao.com/search?keyword=多国爆发床虱危机)
+1. [以色列北部城镇遭袭 一座建筑受损](https://so.toutiao.com/search?keyword=以色列北部城镇遭袭+一座建筑受损)
+1. [朱学恒为十年前反服贸向蔡正元道歉](https://so.toutiao.com/search?keyword=朱学恒为十年前反服贸向蔡正元道歉)
+1. [东北大哥雪洞里吃火锅](https://so.toutiao.com/search?keyword=东北大哥雪洞里吃火锅)
+1. [巴勒斯坦支持者聚集在拜登家附近](https://so.toutiao.com/search?keyword=巴勒斯坦支持者聚集在拜登家附近)
+1. [哈姆：跟里夫斯说打替补上场不会少](https://so.toutiao.com/search?keyword=哈姆：跟里夫斯说打替补上场不会少)
+1. [男生电梯内戴面具举玩具刀吓坏住户](https://so.toutiao.com/search?keyword=男生电梯内戴面具举玩具刀吓坏住户)
 1. [湖北襄阳贩卖出生证医院6人被批捕](https://so.toutiao.com/search?keyword=湖北襄阳贩卖出生证医院6人被批捕)
 1. [制片人可以内定演员吗](https://so.toutiao.com/search?keyword=制片人可以内定演员吗)
 1. [0713回应陈楚生16年后又夺冠](https://so.toutiao.com/search?keyword=0713回应陈楚生16年后又夺冠)
 1. [大连鬼秤检测结果出炉 官方调查](https://so.toutiao.com/search?keyword=大连鬼秤检测结果出炉+官方调查)
 1. [官方通报小学食堂疑吃出鼠头：系兔头](https://so.toutiao.com/search?keyword=官方通报小学食堂疑吃出鼠头：系兔头)
-1. [镇长砸水瓶后村民拍桌回怼？当地回应](https://so.toutiao.com/search?keyword=镇长砸水瓶后村民拍桌回怼？当地回应)
-1. [广州一工地挖破燃气管道？假的](https://so.toutiao.com/search?keyword=广州一工地挖破燃气管道？假的)
-1. [媒体：加沙巷战以军“不败而败”](https://so.toutiao.com/search?keyword=媒体：加沙巷战以军“不败而败”)
 1. [男子申请强执12万获赔1600只鹅](https://so.toutiao.com/search?keyword=男子申请强执12万获赔1600只鹅)
-1. [男子喂猪时晕倒 遭猪啃食下半身](https://so.toutiao.com/search?keyword=男子喂猪时晕倒+遭猪啃食下半身)
-1. [大批中国公民滞留俄罗斯？官方回应](https://so.toutiao.com/search?keyword=大批中国公民滞留俄罗斯？官方回应)
 1. [温州民房坍塌4人遇难](https://so.toutiao.com/search?keyword=温州民房坍塌4人遇难)
-1. [国家一级导演车径行去世](https://so.toutiao.com/search?keyword=国家一级导演车径行去世)
-1. [这届年轻人双11消费变了](https://so.toutiao.com/search?keyword=这届年轻人双11消费变了)
 1. [叙利亚大使：望山东商界参与叙重建](https://so.toutiao.com/search?keyword=叙利亚大使：望山东商界参与叙重建)
 1. [以方称哈马斯已失去对加沙北部控制](https://so.toutiao.com/search?keyword=以方称哈马斯已失去对加沙北部控制)
 1. [德国文化界这次为何没有声援以色列](https://so.toutiao.com/search?keyword=德国文化界这次为何没有声援以色列)
-1. [伊朗：是时候就加沙局势采取行动了](https://so.toutiao.com/search?keyword=伊朗：是时候就加沙局势采取行动了)
-1. [男子杀人逃深山 养8只恶犬防身](https://so.toutiao.com/search?keyword=男子杀人逃深山+养8只恶犬防身)
-1. [大学生偷返高中 老师表情亮了](https://so.toutiao.com/search?keyword=大学生偷返高中+老师表情亮了)
 1. [民警收到YYDS锦旗后表情绷不住了](https://so.toutiao.com/search?keyword=民警收到YYDS锦旗后表情绷不住了)
-1. [女方悔婚不退彩礼被砍杀？警方介入](https://so.toutiao.com/search?keyword=女方悔婚不退彩礼被砍杀？警方介入)
-1. [加沙最大医院39名婴儿因断电缺氧死亡](https://so.toutiao.com/search?keyword=加沙最大医院39名婴儿因断电缺氧死亡)
-1. [女子看守所探监 等待中吸毒被捕](https://so.toutiao.com/search?keyword=女子看守所探监+等待中吸毒被捕)
-1. [爸爸喝醉把儿子忘地铁上了](https://so.toutiao.com/search?keyword=爸爸喝醉把儿子忘地铁上了)
-1. [白鹿为报秦霄贤的仇等了两个月](https://so.toutiao.com/search?keyword=白鹿为报秦霄贤的仇等了两个月)
-1. [麻省理工亲巴组织阻止犹太学生上课](https://so.toutiao.com/search?keyword=麻省理工亲巴组织阻止犹太学生上课)
-1. [天一亮时间就不属于我了](https://so.toutiao.com/search?keyword=天一亮时间就不属于我了)
-1. [勇士vs骑士述评：汤追双重伤害](https://so.toutiao.com/search?keyword=勇士vs骑士述评：汤追双重伤害)
 1. [冷空气发力我国大部气温将创新低](https://so.toutiao.com/search?keyword=冷空气发力我国大部气温将创新低)
 1. [以军炮击 黎巴嫩老妇拒绝离开家乡](https://so.toutiao.com/search?keyword=以军炮击+黎巴嫩老妇拒绝离开家乡)
 1. [大四学生请假回家结婚](https://so.toutiao.com/search?keyword=大四学生请假回家结婚)
-1. [东北大哥雪洞里吃火锅](https://so.toutiao.com/search?keyword=东北大哥雪洞里吃火锅)
 1. [“双11”透视：“多巴胺经济”爆发](https://so.toutiao.com/search?keyword=“双11”透视：“多巴胺经济”爆发)
-1. [张杰晒和三个女儿的背影照](https://so.toutiao.com/search?keyword=张杰晒和三个女儿的背影照)
-1. [房地产政策效果正在显现](https://so.toutiao.com/search?keyword=房地产政策效果正在显现)
 1. [CBA前瞻：京辽大战一触即发](https://so.toutiao.com/search?keyword=CBA前瞻：京辽大战一触即发)
 1. [范志毅：中国足球输习惯了但还得踢](https://so.toutiao.com/search?keyword=范志毅：中国足球输习惯了但还得踢)
-1. [美加州郡长：对中国有意见你去过吗](https://so.toutiao.com/search?keyword=美加州郡长：对中国有意见你去过吗)
-1. [老人反对装电梯建好又想用被拒绝](https://so.toutiao.com/search?keyword=老人反对装电梯建好又想用被拒绝)
-1. [校方回应女生在图书馆占16座还骂人](https://so.toutiao.com/search?keyword=校方回应女生在图书馆占16座还骂人)
 1. [网传东方雨虹1400多名员工亏超15亿](https://so.toutiao.com/search?keyword=网传东方雨虹1400多名员工亏超15亿)
-1. [以军称空袭叙利亚武装人员基础设施](https://so.toutiao.com/search?keyword=以军称空袭叙利亚武装人员基础设施)
-1. [美媒：美军援以乌但已无法控制事态](https://so.toutiao.com/search?keyword=美媒：美军援以乌但已无法控制事态)
-1. [陕西回应强砍3万棵国槐：违规占用](https://so.toutiao.com/search?keyword=陕西回应强砍3万棵国槐：违规占用)
 1. [双11电商巨头未公布总交易量](https://so.toutiao.com/search?keyword=双11电商巨头未公布总交易量)
 1. [独生子推两个轮椅带双亲外出买菜](https://so.toutiao.com/search?keyword=独生子推两个轮椅带双亲外出买菜)
-1. [巴勒斯坦支持者聚集在拜登家附近](https://so.toutiao.com/search?keyword=巴勒斯坦支持者聚集在拜登家附近)
 1. [京东：约300个品牌销售额破亿](https://so.toutiao.com/search?keyword=京东：约300个品牌销售额破亿)
 1. [广西面包车与货车对向碰撞6死1伤](https://so.toutiao.com/search?keyword=广西面包车与货车对向碰撞6死1伤)
-1. [美媒：美国众议院已“完全失控”](https://so.toutiao.com/search?keyword=美媒：美国众议院已“完全失控”)
 1. [郑州市副市长陈宏伟已任市委常委](https://so.toutiao.com/search?keyword=郑州市副市长陈宏伟已任市委常委)
 1. [张译谈为《无价之宝》“献声”](https://so.toutiao.com/search?keyword=张译谈为《无价之宝》“献声”)
 1. [杜兰特：比尔的状态令人惊喜](https://so.toutiao.com/search?keyword=杜兰特：比尔的状态令人惊喜)
@@ -86,9 +102,7 @@
 1. [坍塌民房所在县县领导几天前刚夜查](https://so.toutiao.com/search?keyword=坍塌民房所在县县领导几天前刚夜查)
 1. [德瓦梅纳比赛中突发心脏病离世](https://so.toutiao.com/search?keyword=德瓦梅纳比赛中突发心脏病离世)
 1. [名嘴：20日与24日是蓝白整合关键日](https://so.toutiao.com/search?keyword=名嘴：20日与24日是蓝白整合关键日)
-1. [多国爆发床虱危机](https://so.toutiao.com/search?keyword=多国爆发床虱危机)
 1. [韩国瑜高雄站台再出金句](https://so.toutiao.com/search?keyword=韩国瑜高雄站台再出金句)
-1. [南方也要冷冷冷了](https://so.toutiao.com/search?keyword=南方也要冷冷冷了)
 1. [冷空气前锋已抵华南](https://so.toutiao.com/search?keyword=冷空气前锋已抵华南)
 1. [杜兰特已2125天没赢过詹姆斯](https://so.toutiao.com/search?keyword=杜兰特已2125天没赢过詹姆斯)
 1. [让中国大市场成为世界大机遇](https://so.toutiao.com/search?keyword=让中国大市场成为世界大机遇)
@@ -165,7 +179,6 @@
 1. [女子半夜洗澡被邻居敲门称扰民](https://so.toutiao.com/search?keyword=女子半夜洗澡被邻居敲门称扰民)
 1. [女子花10万装修烂尾房独住](https://so.toutiao.com/search?keyword=女子花10万装修烂尾房独住)
 1. [支原体肺炎吃阿奇霉素无效要换药吗](https://so.toutiao.com/search?keyword=支原体肺炎吃阿奇霉素无效要换药吗)
-1. [男子在江心发现生锈保险箱](https://so.toutiao.com/search?keyword=男子在江心发现生锈保险箱)
 1. [年终消费旺季到来 什么商品卖得好](https://so.toutiao.com/search?keyword=年终消费旺季到来+什么商品卖得好)
 1. [海南下月起全面禁用生鲜灯](https://so.toutiao.com/search?keyword=海南下月起全面禁用生鲜灯)
 1. [第19届中国模拟联合国大会开幕](https://so.toutiao.com/search?keyword=第19届中国模拟联合国大会开幕)
