--- a/archives/toutiao-search/2023-11-12.md
+++ b/archives/toutiao-search/2023-11-12.md
@@ -1,59 +1,76 @@
 # 2023-11-12
 
-共 242 条
+共 258 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sun Nov 12 2023 15:00:47 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sun Nov 12 2023 16:00:43 GMT+0800 (China Standard Time) -->
 1. [警方公开通缉缅北果敢4名电诈头目](https://so.toutiao.com/search?keyword=警方公开通缉缅北果敢4名电诈头目)
-1. [东北一校8名男生集体穿军大衣上课](https://so.toutiao.com/search?keyword=东北一校8名男生集体穿军大衣上课)
+1. [低价硝烟下天猫京东公布双11战绩](https://so.toutiao.com/search?keyword=低价硝烟下天猫京东公布双11战绩)
 1. [全国秋粮收获已过九成半](https://so.toutiao.com/search?keyword=全国秋粮收获已过九成半)
-1. [小伙改装无人机当“私人飞机”](https://so.toutiao.com/search?keyword=小伙改装无人机当“私人飞机”)
-1. [“双十一”为什么越来越冷清](https://so.toutiao.com/search?keyword=“双十一”为什么越来越冷清)
 1. [大批中国公民滞留俄罗斯？官方回应](https://so.toutiao.com/search?keyword=大批中国公民滞留俄罗斯？官方回应)
-1. [男子杀人逃深山 养8只恶犬防身](https://so.toutiao.com/search?keyword=男子杀人逃深山+养8只恶犬防身)
 1. [这届年轻人双11消费变了](https://so.toutiao.com/search?keyword=这届年轻人双11消费变了)
 1. [大学生偷返高中 老师表情亮了](https://so.toutiao.com/search?keyword=大学生偷返高中+老师表情亮了)
-1. [美加州郡长：对中国有意见你去过吗](https://so.toutiao.com/search?keyword=美加州郡长：对中国有意见你去过吗)
-1. [镇长砸水瓶后村民拍桌回怼？当地回应](https://so.toutiao.com/search?keyword=镇长砸水瓶后村民拍桌回怼？当地回应)
-1. [广州一工地挖破燃气管道？假的](https://so.toutiao.com/search?keyword=广州一工地挖破燃气管道？假的)
+1. [天一亮时间就不属于我了](https://so.toutiao.com/search?keyword=天一亮时间就不属于我了)
+1. [中国斡旋后沙特伊朗迎最重大进展](https://so.toutiao.com/search?keyword=中国斡旋后沙特伊朗迎最重大进展)
+1. [东北一校8名男生集体穿军大衣上课](https://so.toutiao.com/search?keyword=东北一校8名男生集体穿军大衣上课)
+1. [男子杀人逃深山 养8只恶犬防身](https://so.toutiao.com/search?keyword=男子杀人逃深山+养8只恶犬防身)
 1. [媒体：加沙巷战以军“不败而败”](https://so.toutiao.com/search?keyword=媒体：加沙巷战以军“不败而败”)
-1. [低价硝烟下天猫京东公布双11战绩](https://so.toutiao.com/search?keyword=低价硝烟下天猫京东公布双11战绩)
-1. [库明加多次杀伤骑士内线搏11次罚球](https://so.toutiao.com/search?keyword=库明加多次杀伤骑士内线搏11次罚球)
+1. [广州一工地挖破燃气管道？假的](https://so.toutiao.com/search?keyword=广州一工地挖破燃气管道？假的)
+1. [镇长砸水瓶后村民拍桌回怼？当地回应](https://so.toutiao.com/search?keyword=镇长砸水瓶后村民拍桌回怼？当地回应)
+1. [“双十一”为什么越来越冷清](https://so.toutiao.com/search?keyword=“双十一”为什么越来越冷清)
 1. [女方悔婚不退彩礼被砍杀？警方介入](https://so.toutiao.com/search?keyword=女方悔婚不退彩礼被砍杀？警方介入)
-1. [以军称空袭叙利亚武装人员基础设施](https://so.toutiao.com/search?keyword=以军称空袭叙利亚武装人员基础设施)
-1. [张杰晒和三个女儿的背影照](https://so.toutiao.com/search?keyword=张杰晒和三个女儿的背影照)
 1. [美媒：美国众议院已“完全失控”](https://so.toutiao.com/search?keyword=美媒：美国众议院已“完全失控”)
-1. [房地产政策效果正在显现](https://so.toutiao.com/search?keyword=房地产政策效果正在显现)
+1. [美加州郡长：对中国有意见你去过吗](https://so.toutiao.com/search?keyword=美加州郡长：对中国有意见你去过吗)
+1. [多国爆发床虱危机](https://so.toutiao.com/search?keyword=多国爆发床虱危机)
+1. [男生电梯内戴面具举玩具刀吓坏住户](https://so.toutiao.com/search?keyword=男生电梯内戴面具举玩具刀吓坏住户)
+1. [张杰晒和三个女儿的背影照](https://so.toutiao.com/search?keyword=张杰晒和三个女儿的背影照)
+1. [布林肯：太多巴勒斯坦人丧生](https://so.toutiao.com/search?keyword=布林肯：太多巴勒斯坦人丧生)
 1. [以总理：将在必要时坚定与世界对抗](https://so.toutiao.com/search?keyword=以总理：将在必要时坚定与世界对抗)
 1. [麻省理工亲巴组织阻止犹太学生上课](https://so.toutiao.com/search?keyword=麻省理工亲巴组织阻止犹太学生上课)
-1. [温州永嘉开展农民自建房隐患排查](https://so.toutiao.com/search?keyword=温州永嘉开展农民自建房隐患排查)
+1. [女子看守所探监 等待中吸毒被捕](https://so.toutiao.com/search?keyword=女子看守所探监+等待中吸毒被捕)
 1. [伊朗：是时候就加沙局势采取行动了](https://so.toutiao.com/search?keyword=伊朗：是时候就加沙局势采取行动了)
-1. [美媒：美军援以乌但已无法控制事态](https://so.toutiao.com/search?keyword=美媒：美军援以乌但已无法控制事态)
-1. [天一亮时间就不属于我了](https://so.toutiao.com/search?keyword=天一亮时间就不属于我了)
-1. [加沙最大医院39名婴儿因断电缺氧死亡](https://so.toutiao.com/search?keyword=加沙最大医院39名婴儿因断电缺氧死亡)
 1. [男子喂猪时晕倒 遭猪啃食下半身](https://so.toutiao.com/search?keyword=男子喂猪时晕倒+遭猪啃食下半身)
-1. [爸爸喝醉把儿子忘地铁上了](https://so.toutiao.com/search?keyword=爸爸喝醉把儿子忘地铁上了)
+1. [房地产政策效果正在显现](https://so.toutiao.com/search?keyword=房地产政策效果正在显现)
+1. [加沙最大医院39名婴儿因断电缺氧死亡](https://so.toutiao.com/search?keyword=加沙最大医院39名婴儿因断电缺氧死亡)
+1. [下雪天仅2位观众戏曲演员坚持演出](https://so.toutiao.com/search?keyword=下雪天仅2位观众戏曲演员坚持演出)
+1. [白鹿为报秦霄贤的仇等了两个月](https://so.toutiao.com/search?keyword=白鹿为报秦霄贤的仇等了两个月)
+1. [加沙医护发信息说可能活不到第二天](https://so.toutiao.com/search?keyword=加沙医护发信息说可能活不到第二天)
+1. [男子聚餐将螃蟹放兜带回给老婆](https://so.toutiao.com/search?keyword=男子聚餐将螃蟹放兜带回给老婆)
+1. [宋楚瑜带亲民党重回台立法机构](https://so.toutiao.com/search?keyword=宋楚瑜带亲民党重回台立法机构)
 1. [国家一级导演车径行去世](https://so.toutiao.com/search?keyword=国家一级导演车径行去世)
+1. [全洛阳都在好奇梦迪是谁](https://so.toutiao.com/search?keyword=全洛阳都在好奇梦迪是谁)
+1. [金莎回应恋情争议](https://so.toutiao.com/search?keyword=金莎回应恋情争议)
+1. [费城76人官方通报乌布雷车祸情况](https://so.toutiao.com/search?keyword=费城76人官方通报乌布雷车祸情况)
+1. [校方回应女生在图书馆占16座还骂人](https://so.toutiao.com/search?keyword=校方回应女生在图书馆占16座还骂人)
+1. [老人反对装电梯建好又想用被拒绝](https://so.toutiao.com/search?keyword=老人反对装电梯建好又想用被拒绝)
+1. [东北大哥雪洞里吃火锅](https://so.toutiao.com/search?keyword=东北大哥雪洞里吃火锅)
+1. [《无所畏惧》前辈用经验提点学生](https://so.toutiao.com/search?keyword=《无所畏惧》前辈用经验提点学生)
+1. [南方也要冷冷冷了](https://so.toutiao.com/search?keyword=南方也要冷冷冷了)
+1. [涉贩卖出生证 南宁一医院责任人被控制](https://so.toutiao.com/search?keyword=涉贩卖出生证+南宁一医院责任人被控制)
+1. [拜登出席活动“犯迷糊”来回徘徊](https://so.toutiao.com/search?keyword=拜登出席活动“犯迷糊”来回徘徊)
+1. [巴方谴责以军用白磷弹袭击希法医院](https://so.toutiao.com/search?keyword=巴方谴责以军用白磷弹袭击希法医院)
+1. [陕西回应强砍3万棵国槐：违规占用](https://so.toutiao.com/search?keyword=陕西回应强砍3万棵国槐：违规占用)
+1. [《以爱为营》郑书意暖心安慰时宴](https://so.toutiao.com/search?keyword=《以爱为营》郑书意暖心安慰时宴)
+1. [美国得州发生交通事故 致6死2伤](https://so.toutiao.com/search?keyword=美国得州发生交通事故+致6死2伤)
+1. [男子用500条轮胎做出中国龙雕塑](https://so.toutiao.com/search?keyword=男子用500条轮胎做出中国龙雕塑)
+1. [足球报：中超多队遇生存危机](https://so.toutiao.com/search?keyword=足球报：中超多队遇生存危机)
+1. [小伙改装无人机当“私人飞机”](https://so.toutiao.com/search?keyword=小伙改装无人机当“私人飞机”)
+1. [库明加多次杀伤骑士内线搏11次罚球](https://so.toutiao.com/search?keyword=库明加多次杀伤骑士内线搏11次罚球)
+1. [以军称空袭叙利亚武装人员基础设施](https://so.toutiao.com/search?keyword=以军称空袭叙利亚武装人员基础设施)
+1. [温州永嘉开展农民自建房隐患排查](https://so.toutiao.com/search?keyword=温州永嘉开展农民自建房隐患排查)
+1. [美媒：美军援以乌但已无法控制事态](https://so.toutiao.com/search?keyword=美媒：美军援以乌但已无法控制事态)
+1. [爸爸喝醉把儿子忘地铁上了](https://so.toutiao.com/search?keyword=爸爸喝醉把儿子忘地铁上了)
 1. [名记：乌布雷遭遇车祸目前情况稳定](https://so.toutiao.com/search?keyword=名记：乌布雷遭遇车祸目前情况稳定)
 1. [女生发现有人用共享洗衣机洗鞋](https://so.toutiao.com/search?keyword=女生发现有人用共享洗衣机洗鞋)
-1. [白鹿为报秦霄贤的仇等了两个月](https://so.toutiao.com/search?keyword=白鹿为报秦霄贤的仇等了两个月)
-1. [老人反对装电梯建好又想用被拒绝](https://so.toutiao.com/search?keyword=老人反对装电梯建好又想用被拒绝)
-1. [女子看守所探监 等待中吸毒被捕](https://so.toutiao.com/search?keyword=女子看守所探监+等待中吸毒被捕)
-1. [校方回应女生在图书馆占16座还骂人](https://so.toutiao.com/search?keyword=校方回应女生在图书馆占16座还骂人)
-1. [南方也要冷冷冷了](https://so.toutiao.com/search?keyword=南方也要冷冷冷了)
-1. [陕西回应强砍3万棵国槐：违规占用](https://so.toutiao.com/search?keyword=陕西回应强砍3万棵国槐：违规占用)
 1. [勇士vs骑士述评：汤追双重伤害](https://so.toutiao.com/search?keyword=勇士vs骑士述评：汤追双重伤害)
 1. [石家庄现多起车祸 疑因洒水路面结冰](https://so.toutiao.com/search?keyword=石家庄现多起车祸+疑因洒水路面结冰)
 1. [记者：中国足协杯决赛开球时间确定](https://so.toutiao.com/search?keyword=记者：中国足协杯决赛开球时间确定)
 1. [男子在江心发现生锈保险箱](https://so.toutiao.com/search?keyword=男子在江心发现生锈保险箱)
 1. [世卫组织称与加沙希法医院失去联系](https://so.toutiao.com/search?keyword=世卫组织称与加沙希法医院失去联系)
-1. [多国爆发床虱危机](https://so.toutiao.com/search?keyword=多国爆发床虱危机)
 1. [以色列北部城镇遭袭 一座建筑受损](https://so.toutiao.com/search?keyword=以色列北部城镇遭袭+一座建筑受损)
 1. [朱学恒为十年前反服贸向蔡正元道歉](https://so.toutiao.com/search?keyword=朱学恒为十年前反服贸向蔡正元道歉)
-1. [东北大哥雪洞里吃火锅](https://so.toutiao.com/search?keyword=东北大哥雪洞里吃火锅)
 1. [巴勒斯坦支持者聚集在拜登家附近](https://so.toutiao.com/search?keyword=巴勒斯坦支持者聚集在拜登家附近)
 1. [哈姆：跟里夫斯说打替补上场不会少](https://so.toutiao.com/search?keyword=哈姆：跟里夫斯说打替补上场不会少)
-1. [男生电梯内戴面具举玩具刀吓坏住户](https://so.toutiao.com/search?keyword=男生电梯内戴面具举玩具刀吓坏住户)
 1. [湖北襄阳贩卖出生证医院6人被批捕](https://so.toutiao.com/search?keyword=湖北襄阳贩卖出生证医院6人被批捕)
 1. [制片人可以内定演员吗](https://so.toutiao.com/search?keyword=制片人可以内定演员吗)
 1. [0713回应陈楚生16年后又夺冠](https://so.toutiao.com/search?keyword=0713回应陈楚生16年后又夺冠)
@@ -84,7 +101,6 @@
 1. [美国一架军用飞机在地中海东部坠毁](https://so.toutiao.com/search?keyword=美国一架军用飞机在地中海东部坠毁)
 1. [美众院成员两周内8次试图互相谴责](https://so.toutiao.com/search?keyword=美众院成员两周内8次试图互相谴责)
 1. [温州民房坍塌瞬间监控视频曝光](https://so.toutiao.com/search?keyword=温州民房坍塌瞬间监控视频曝光)
-1. [全洛阳都在好奇梦迪是谁](https://so.toutiao.com/search?keyword=全洛阳都在好奇梦迪是谁)
 1. [以方罕见公开回击美方](https://so.toutiao.com/search?keyword=以方罕见公开回击美方)
 1. [果敢同盟军为什么这么能打](https://so.toutiao.com/search?keyword=果敢同盟军为什么这么能打)
 1. [美B-21隐形轰炸机厉害在哪](https://so.toutiao.com/search?keyword=美B-21隐形轰炸机厉害在哪)
